<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/theme_button_description"
        android:icon="@drawable/ic_theme_toggle"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_recent"
        android:title="@string/action_recent"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:title="@string/action_text_size"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_font_increase"
                android:title="@string/action_font_increase" />
            <item
                android:id="@+id/action_font_decrease"
                android:title="@string/action_font_decrease" />
            <item
                android:id="@+id/action_font_reset"
                android:title="@string/action_font_reset" />
        </menu>
    </item>
</menu>
